# FuseHide

./: build.gradle.kts  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: native_init  xposed_init
app/src/main/cpp/: CMakeLists.txt  fusefixer.cpp
app/src/main/cpp/fusefixer/: elf_utils.cpp  elf_utils.hpp  fuse_wrappers.cpp  hook_install.cpp  jni_entry.cpp  runtime_state.cpp  state.hpp  unicode_policy.cpp  wrappers.hpp
app/src/main/java/fusefixer/: MainThreadTask.java  StatusBroadcastReceiver.java  StructStatFormatter.java
app/src/main/java/io/github/xiaotong6666/fusefixer/: Entry.java  HideConfig.kt  HideConfigNativeBridge.java  HideConfigStore.kt  MainActivity.kt  Utils.kt
app/src/main/java/io/github/xiaotong6666/fusehide/: MainActivity.kt
app/src/main/res/values/: arrays.xml  strings.xml  styles.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-night/: styles.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
gradle/: libs.versions.toml
xposed-stubs/: .gitignore
xposed-stubs/src/main/java/android/app/: AndroidAppHelper.java  Application.java
xposed-stubs/src/main/java/de/robv/android/xposed/: IXposedHookLoadPackage.java
xposed-stubs/src/main/java/de/robv/android/xposed/callbacks/: XC_LoadPackage.java
(+2 files in other folders)
